apps/traefik/helm/Service-traefik.yml
---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
    helm.sh/chart: traefik-26.1.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
  ports:
    - port: 80
      name: "web"
      targetPort: web
      protocol: TCP
      nodePort: 30080
    - port: 443
      name: "websecure"
      targetPort: websecure
      protocol: TCP
      nodePort: 30443
